// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaults 1`] = `
[
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "name": "plone-backend-deployment-c8e77b89",
    },
    "spec": {
      "replicas": 2,
      "selector": {
        "matchLabels": {
          "app": "plone-backend-deployment-c83d26f8",
        },
      },
      "template": {
        "metadata": {
          "labels": {
            "app": "plone-backend-deployment-c83d26f8",
          },
        },
        "spec": {
          "containers": [
            {
              "image": "plone/plone-backend:latest",
              "name": "deployment-container",
            },
          ],
        },
      },
    },
  },
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "name": "plone-backend-service-c81df201",
    },
    "spec": {
      "clusterIP": "None",
      "ports": [
        {
          "port": 8080,
          "targetPort": 8080,
        },
      ],
      "selector": {
        "app": "plone-backend-deployment-c83d26f8",
      },
      "type": "ClusterIP",
    },
  },
]
`;

exports[`defaults-with-pdp 1`] = `
[
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "name": "plone-backend_with_pdb-deployment-c828b7f6",
    },
    "spec": {
      "replicas": 2,
      "selector": {
        "matchLabels": {
          "app": "plone-backend_with_pdb-deployment-c8de3ed2",
        },
      },
      "template": {
        "metadata": {
          "labels": {
            "app": "plone-backend_with_pdb-deployment-c8de3ed2",
          },
        },
        "spec": {
          "containers": [
            {
              "image": "plone/plone-backend:latest",
              "name": "deployment-container",
            },
          ],
        },
      },
    },
  },
  {
    "apiVersion": "policy/v1",
    "kind": "PodDisruptionBudget",
    "metadata": {
      "name": "plone-backend_with_pdb-deployment-pdb-c86717f8",
    },
    "spec": {
      "minAvailable": 1,
      "selector": {
        "matchLabels": {
          "app": "plone-backend_with_pdb-deployment-c8de3ed2",
        },
      },
    },
  },
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "name": "plone-backend_with_pdb-service-c85257cd",
    },
    "spec": {
      "clusterIP": "None",
      "ports": [
        {
          "port": 8080,
          "targetPort": 8080,
        },
      ],
      "selector": {
        "app": "plone-backend_with_pdb-deployment-c8de3ed2",
      },
      "type": "ClusterIP",
    },
  },
]
`;
